--- a/NEURODASH/views/forms/login.html
+++ b/NEURODASH/views/forms/login.html
@@ -36,6 +36,11 @@
                         <i class="fa-regular fa-eye toggle-password" id="showPasswordA" onclick="verPassword('txtUserpasswordA', 'showPasswordA', 'hidePasswordA')" style="display: none;"></i>
                     </div>
                 </div>
+                <p class="forgot-passwordL">
+                    <a href="#" id="forgotPasswordLink">Olvidaste tu contraseña?</a>
+                </p>
+                <!-- <p class="text-end"><a href="#" id="sign-up-btn2">Olvidaste tu contraseña?</a></p> -->
+
                 
                 <!-- <input type="submit" value="login" class="btn"> -->
                 <input type="submit" class="comic-button" value="Ingresar">
