--- a/NEURODASH/views/forms/valitionEmail.html
+++ b/NEURODASH/views/forms/valitionEmail.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
 
-    <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../lib/bootstrap/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="../assets/css/login.css"> -->
 
-    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="../../assets/css/main.css">
 </head>
 <body class="backgound-start">
     <div class="container aling-item-centerN min-vh-100">
         <div class="row border rounded-5 p-3 fondo-login shadow box-area">
             <div class="col-md-6 rounded-4 aling-item-centerN flex-column left-box" >
                 <div class="featured-image mb-3">
-                    <img src="../assets/img/iconos-principales/nuzit-fondo-transp.png" class="img-fluid img-login">
+                    <img src="../../assets/img/iconos-principales/nuzit-fondo-transp.png" class="img-fluid img-login">
                 </div>
                     <p class="text-white fs-4 texto text-wrap text-center" >¡Encuentra, recuerda, y conquista!</p>  
             </div> 
@@ -45,7 +45,7 @@
         </div>
     </div>
 
-    <script src="../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
