--- a/NEURODASH/views/forms/forgotPassword.html
+++ b/NEURODASH/views/forms/forgotPassword.html
@@ -15,29 +15,34 @@
 </head>
 <body class="backgound-start-back">
 
-    <div class="container-fluid d-flex justify-content-center align-items-center">
-        <div class="col-9 d-flex justify-content-center align-items-center">
-            <div class="col-6 d-flex justify-content-center align-items-center">
-                <form class="sign-in-form">
-                    <h2 class="title-forms">Recuperacion de contraseña</h2>
-                    <div class="col-12" id="liveAlertPlaceholder"></div>
-                    <div class="input-field">
-                        <i class="fas fa-user me-3"></i>
-                        <input type="email" placeholder="Email user" id="txtUserEmailA">
-                    </div>
-    
-                    
-                    <a href="../tokens/tokenForgotPassword.html" class="comic-button">Confirmar</a>
-                </form>
-            </div>
-            <div class="col-6 fondi d-flex justify-content-center align-items-center">
-                <div class="panel right-panel">
-                    <img src="../../assets/img/iconos/neurodash.png" alt="" class="image-description">
-                    <div class="content">
-                        <h3>Olvidatse tu contraseña?</h3>
-                        <p>Digita tu correo electronico para enviarte un correo de verificacion.</p>
-                    </div>
+    <div class="container-fluid" style="height: 100vh;">
+        <div class="row mt-3">
+            <div class="col-12 d-flex justify-content-center align-items-center">
+                <div class="col-6 d-flex justify-content-start">
+                    <a href="login.html">
+                        <img src="../../assets/img/iconos-desarrollo/devolver.png" alt="" class="icoDevpas">
+                    </a>
                 </div>
+                <div class="col-6 d-flex justify-content-end">
+                    <img src="../../assets/img/iconos-desarrollo/music.png" alt="" class="icoDevpas me-3">
+                    <img src="../../assets/img/iconos-desarrollo/sonido.png" alt="" class="icoDevpas">
+                </div>
+            </div>
+        </div>
+        <div class="row bj">
+            <div class="col-12 d-flex justify-content-center align-items-center">
+                    <form class="sign-in-form des tam">
+                        <h6 class="title-forms2">Digita tu correo electronico para enviarte un codigo de verificación</h6>
+                        <div class="col-12" id="liveAlertPlaceholder"></div>
+                        <div class="input-field">
+                            <i class="fas fa-user me-3"></i>
+                            <input type="email" placeholder="Email user" id="txtUserEmailA" required>
+                        </div>
+                        
+                        <a href="../tokens/tokenForgotPassword.html" type="submit" class="comic-button" id="btnConfirmar">Confirmar</a>
+                        <!-- <button type="submit" class="comic-button" id="btnConfirmar">Confirmar</button>  -->
+                    </form>
+                
             </div>
         </div>
     </div>
@@ -46,7 +51,6 @@
     
     <script src="../../lib/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="../../lib/bootstrap/js/bootstrap.js"></script>
-    <script src="../../assets/js/global/visibilidadPasword.js"></script>
 
 </body>
 </html>
