--- a/NEURODASH/views/tokens/tokenForgotPassword.html
+++ b/NEURODASH/views/tokens/tokenForgotPassword.html
@@ -8,20 +8,21 @@
 
     <!-- Hoja de estilos personalizada -->
     <link rel="stylesheet" href="../../assets/css/main.css">
+    <link rel="stylesheet" href="../../assets/css/pages/forgotPassword.css">
     
     <!-- librerias -->
     <link rel="stylesheet" href="../../lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../../lib/fontawesome/css/all.css">
     <script src="../../assets/js/sound/controlles.js"></script>
 </head>
-<body class="backgound-tokens aling-item-centerN">
+<body class="backgound-start-back aling-item-centerN">
     <div class="container">
         <div class="col-lg-12 d-flex justify-content-center">
-            <form class="form-token">
+            <form class="form-token formValPas ">
                 <a href="../forms/forgotPassword.html"><span class="close-token">X</span></a>
                 <div class="info">
                     <!-- <span class="title">Validación de correo electrónico</span> -->
-                    <p class="description">Revisa tu correo electrónico, se te proporcionará un código de verificación</p>
+                    <p>Ingresa el codigo de verificación para reestablecer tu contraseña</p>
                 </div>
                 <div class="input-fields">
                     <input placeholder="" type="tel" maxlength="1">
@@ -31,7 +32,7 @@
                 </div>
                 
                 <div class="action-btns">
-                    <a class="verify-token" href="../valitionEmail.html">Verificar</a>
+                    <a class="verify-token" href="../forms/validationPassword.html">Verificar</a>
                 </div>
             </form>
         </div>
