--- a/NEURODASH/assets/css/components/forms.css
+++ b/NEURODASH/assets/css/components/forms.css
@@ -1,7 +1,9 @@
 .form_style {
     outline: none;
-    border: 2px solid #264143;
-    box-shadow: 3px 4px 0px 1px #5c4ce9;
+    border: 2px solid #26432a;
+    box-shadow: 3px 4px 0px 1px #e63c8b;
+
+    /* box-shadow: 3px 4px 0px 1px #5067e9; */
     width: 290px;
     padding: 12px 10px;
     border-radius: 4px;
@@ -10,17 +12,17 @@
 
 .form_style:focus, .btn-form:focus {
     transform: translateY(4px);
-    box-shadow: 1px 2px 0px 0px #5c4ce9;
+    box-shadow: 1px 2px 0px 0px #4f74ec;
 }
 
 
 /* From Uiverse.io by John-CFO */ 
 .form-token {
-    --glow-color: rgb(176, 255, 251);
+    --glow-color: rgb(248, 48, 255);
     --glow-spread-color: rgba(123, 246, 255, 0.781);
     --enhanced-glow-color: rgb(182, 71, 71);
     --btn-color: rgba(65, 65, 65, 0.508);
-    border: 2px solid var(--glow-color);
+    border: 4px solid var(--glow-color);
     padding: 25px;
     display: flex;
     max-width: 420px;
@@ -31,6 +33,13 @@
     background-color: var(--btn-color);
     border-radius: 20px;
     position: relative;
+}
+
+.form-token p{
+    color: rgb(212, 224, 38);
+    font-weight: 800;
+    font-size: 1.2rem;
+    margin-top: 10px;
 }
 
 /*----heading and description-----*/
@@ -72,7 +81,7 @@
     font-size: 1.5rem;
     color: #fff;
     border-radius: 12px;
-    border: 2.5px solid rgba(253, 253, 253, 0.363);
+    border: 2.5px solid rgb(194, 59, 206);
     background-color: rgb(255 255 255 / 0.05);
 }
 
@@ -144,3 +153,24 @@
     background-color: rgba(255, 0, 0, 0.644);
     color: #fff;
 }
+
+
+/* ------Form forgot password-------- */
+
+.registrar-login h2{
+    color: #49d155;
+    font-weight: 800;
+}
+
+.registrar-login a{
+    background-color: #49d155;;
+    font-weight: 700;
+    font-size: 20px;
+}
+.registrar-login a:hover{
+    background-color: #69f074;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+
