--- a/NEURODASH/assets/css/utilities/utilices.css
+++ b/NEURODASH/assets/css/utilities/utilices.css
@@ -17,7 +17,8 @@
 }
 
 .box-area{
-    width: 500px;
+    width: 600px;
+    border: 3px solid #e63c8b;;
 }
 /* ----utilidades de entrenamiento-- */
 
