--- a/NEURODASH/views/forms/login.html
+++ b/NEURODASH/views/forms/login.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                 <p class="forgot-passwordL">
-                    <a href="#" id="forgotPasswordLink">Olvidaste tu contraseña?</a>
+                    <a href="forgotPassword.html" id="forgotPasswordLink">Olvidaste tu contraseña?</a>
                 </p>
                 <!-- <p class="text-end"><a href="#" id="sign-up-btn2">Olvidaste tu contraseña?</a></p> -->
 
