--- a/NEURODASH/views/creacion_sala/crearSala.html
+++ b/NEURODASH/views/creacion_sala/crearSala.html
@@ -34,7 +34,7 @@
                             <img src="../../assets/img/iconos/home.png" alt="home" class="hmeSala">
                         </a>
                         
-                        <button class="btnCrSala" style="background-color: #ec2c8c;" onclick= "showSection('menuMdojuego')" >
+                        <button class="btnCrSala" style="background-color: #ec2c8c;" onclick= "showSection('menuMdojuego')">
                             Modo de juego
                         </button>
                         <button class="btnCrSala" style="background-color: rgb(236, 207, 42);" onclick= "showSection('menuNivel')">
@@ -64,7 +64,7 @@
     <div class="row">
       <div class="col-12 d-flex justify-content-end align-items-center p-5">
         <div class="cuadroSala">
-            <h1 style="margin-left: 30px;">CREAR SALA</h1>
+            <h1 style="margin-left: 30px;" class="">CREAR SALA</h1>
             <a href="config/configStart.html" class="imgSalaCrear">
                 <img src="../../assets/img/iconos/config.png" alt="Image background" class="img-crear">
             </a>
