--- a/NEURODASH/views/forms/login.html
+++ b/NEURODASH/views/forms/login.html
@@ -31,7 +31,7 @@
                     <input type="password" placeholder="Password" id="txtUserpasswordA" >
                 </div>
                 <!-- <input type="submit" value="login" class="btn"> -->
-                <input type="submit" class="comic-button" value="Ingresar">
+                <input type="submit" class="comic-button sound-sys" value="Ingresar">
                 <p class="account-text"> Don't have an account? <a href="#" id="sign-up-btn2">Sign up</a></p>
             </form>
 
